feat(lint): reformat all codebase :tada: